--- a/index.html
+++ b/index.html
@@ -657,9 +657,9 @@ https://templatemo.com/tm-570-chain-app-dev
         <div class="col-lg-3">
           <div class="footer-widget">
             <h4>Contact Us</h4>
-            <p>Rio de Janeiro - RJ, 22795-008, Brazil</p>
-            <p><a href="#">010-020-0340</a></p>
-            <p><a href="#">info@company.co</a></p>
+            <p>Wali Compeny , 22795-008, Gilgit,Pakistan</p>
+            <p><a href="#">03145594218</a></p>
+            <p><a href="#">wali@company.co</a></p>
           </div>
         </div>
         <div class="col-lg-3">
