--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ https://templatemo.com/tm-570-chain-app-dev
                                   lorem ipsum dolor sit amet, consectetur picing elit massive big blasta.”</p>
                               </div>
                               <div class="down-content">
-                                <img src="assets/images/client-image.jpg" alt="">
+                                <img src="assets/images/client-image.png" alt="">
                                 <div class="right-content">
                                   <h4>David Martino</h4>
                                   <span>CEO of David Company</span>
