--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ https://templatemo.com/tm-570-chain-app-dev
                               <div class="down-content">
                                 <img src="assets/images/client-image.png" alt="">
                                 <div class="right-content">
-                                  <h4>David Martino</h4>
+                                  <h4>Arslan</h4>
                                   <span>CEO of David Company</span>
                                 </div>
                               </div>
