--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ https://templatemo.com/tm-570-chain-app-dev
                                 <img src="assets/images/client-image.png" alt="">
                                 <div class="right-content">
                                   <h4>Arslan</h4>
-                                  <span>CEO of David Company</span>
+                                  <span>CEO of Wali Company</span>
                                 </div>
                               </div>
                             </div>
@@ -469,7 +469,7 @@ https://templatemo.com/tm-570-chain-app-dev
                               <div class="down-content">
                                 <img src="assets/images/client-image.jpg" alt="">
                                 <div class="right-content">
-                                  <h4>Jake H. Nyo</h4>
+                                  <h4>Luqman Hussain</h4>
                                   <span>CTO of Digital Company</span>
                                 </div>
                               </div>
